--- a/package.json
+++ b/package.json
@@ -14,16 +14,12 @@
   "scripts": {
     "build": "lb-tsc",
     "build:watch": "lb-tsc --watch",
-    "lint": "npm run eslint && npm run prettier:check",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
-    "prettier:cli": "lb-prettier \"**/*.ts\" \"**/*.js\"",
-    "prettier:check": "npm run prettier:cli -- -l",
-    "prettier:fix": "npm run prettier:cli -- --write",
-    "eslint": "lb-eslint --report-unused-disable-directives .",
-    "eslint:fix": "npm run eslint -- --fix",
+    "lint": "npm run eslint -- . && npm run prettier -- .",
+    "lint:staged": "lint-staged",
+    "eslint": "lb-eslint --fix --report-unused-disable-directives",
+    "prettier": "lb-prettier --write",
     "pretest": "npm run rebuild",
     "test": "nyc lb-mocha --allow-console-logs \"dist/__tests__\"",
-    "posttest": "npm run lint",
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
     "docker:build": "docker build -t cicd-test-app .",
     "docker:run": "docker run -p 3000:3000 -d cicd-test-app",
@@ -64,6 +60,7 @@
     "@loopback/testlab": "^5.0.1",
     "@types/node": "^14.18.21",
     "eslint": "^8.17.0",
+    "lint-staged": "^13.0.3",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.8.2",
