--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - run:
           name: Create lockfile
-          command: npm install --package-lock-only
+          command: npm install
       - run:
           name: Audit
           command: npm audit
