--- a/.nycrc.json
+++ b/.nycrc.json
@@ -2,7 +2,7 @@
   "extends": "@istanbuljs/nyc-config-typescript",
   "all": true,
   "check-coverage": true,
-  "reporter": ["html"],
+  "reporter": ["html", "text"],
   "branches": 80,
   "lines": 80,
   "functions": 80,
