--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,8 @@ workflows:
         jobs:
           - build_test
           - deploy:
-              requires: build_test
+              requires:
+                - build_test
               filters:
                 branches:
                   only: master
