Update circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,13 +44,12 @@ jobs:
           paths:
             - .
   deploy:
+    docker:
+      - image: cimg/node:16.2.0
     executor: heroku/default
     steps:
       - attach_workspace:
           at: ~/project
-      - node/install-packages:
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
       - heroku/deploy-via-git:
           force: true
 
