Update circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,14 +44,26 @@ jobs:
           paths:
             - .
   deploy:
-    docker:
-      - image: cimg/node:16.2.0
-    executor: heroku/default
+    machine: true
     steps:
-      - attach_workspace:
-          at: ~/project
-      - heroku/deploy-via-git:
-          force: true
+      - checkout
+      - run:
+        name: Build & push Docker image to Heroku
+        command: |
+          sudo curl https://cli-assets.heroku.com/install.sh | sh
+          HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
+          HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a bw-cicd-test-app web
+          HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a bw-cicd-test-app web
+
+  # deploy:
+  # docker:
+  #   - image: cimg/node:16.2.0
+  # executor: heroku/default
+  # steps:
+  #   - attach_workspace:
+  #       at: ~/project
+  #   - heroku/deploy-via-git:
+  #       force: true
 
 workflows:
   # Below is the definition of your workflow.
@@ -61,9 +73,9 @@ workflows:
   build_test_deploy:
     jobs:
       - build_test
-      - deploy:
-          requires:
-            - build_test
-          filters:
-            branches:
-              only: master
+      - deploy
+        # requires:
+        #   - build_test
+        # filters:
+        #   branches:
+        #     only: master
