--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,26 +44,20 @@ jobs:
           paths:
             - .
   deploy:
-    machine: true
+    docker:
+      - image: cimg/base:2021.07
     steps:
+      # For using docker commands.
+      - setup_remote_docker:
+          version: 19.03.13
       - checkout
-      - run:
-          name: Build & push Docker image to Heroku
-          command: |
-            sudo curl https://cli-assets.heroku.com/install.sh | sh
-            HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
-            HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a bw-cicd-test-app web
-            HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a bw-cicd-test-app web
-
-  # deploy:
-  # docker:
-  #   - image: cimg/node:16.2.0
-  # executor: heroku/default
-  # steps:
-  #   - attach_workspace:
-  #       at: ~/project
-  #   - heroku/deploy-via-git:
-  #       force: true
+      - run: docker build .
+      - heroku/install
+      - run: heroku container:login
+      - heroku/push-docker-image:
+          process-types: web
+      - heroku/release-docker-image:
+          process-types: web
 
 workflows:
   # Below is the definition of your workflow.
@@ -74,8 +68,5 @@ workflows:
     jobs:
       - build_test
       - deploy
-        # requires:
-        #   - build_test
-        # filters:
-        #   branches:
-        #     only: master
+        requires:
+          - build_test
