--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,6 @@ workflows:
   build_test_deploy:
     jobs:
       - build_test
-      - deploy
+      - deploy:
         requires:
           - build_test
