--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,4 @@ workflows:
   build_test_deploy:
     jobs:
       - build_test
-      - deploy:
-        requires:
-          - build_test
+      - deploy
