--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,8 @@ jobs:
         run: npm ci
         # run: npm ci --ignore-scripts
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Test
-        run: npm run
+      - name: Run tests
+        run: npm run test
 
   build:
     runs-on: ubuntu-latest
