--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,11 @@
 name: Build
 
 on:
-  push:
-    branches: ['github-actions']
+  workflow_call:
+    inputs:
+      app_name:
+        required: true
+        type: string
 
 jobs:
   build:
@@ -10,5 +13,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Log
+        run: echo "app name ${{ inputs.app_name }}"
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $APP_NAME:$(date +%s)
+        run: docker build . --file Dockerfile --tag ${{ inputs.app_name }}:$(date +%s)
