--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
   APP_NAME: cicd-test-app
 
 jobs:
-  lint:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -34,3 +34,8 @@ jobs:
 
       - name: Run tests
         run: npm run test
+
+      - name: Build
+        uses: ./.github/workflows/build.yml
+        with:
+          app_name: $APP_NAME
