--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,4 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
     with:
-      app_name: ${{ APP_NAME }}
+      app_name: cicd-test-app
