--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,8 @@ on:
 #             pull_request:
 #     branches: ['master']
 
-env:
-  APP_NAME: cicd-test-app
-
 jobs:
-  ci:
+  lint_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -30,7 +27,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        # run: npm ci --ignore-scripts
+
+      - name: Lint
+        run: npm run lint
 
       - name: Run tests
         run: npm run test
@@ -38,4 +37,4 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
     with:
-      app_name: ${{ env.APP_NAME }}
+      app_name: cicd-test-app
