--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -8,6 +8,6 @@ on:
 
 jobs:
   ci:
-    uses: ./.github/workflows/jobs/ci.yml
+    uses: ./.github/workflows/ci.yml
     with:
       app_name: cicd-test-app
