--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -11,3 +11,8 @@ jobs:
     uses: ./.github/workflows/ci.yml
     with:
       app_name: cicd-test-app
+
+  build:
+    uses: ./.github/workflows/build.yml
+    with:
+      app_name: cicd-test-app
