--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -16,7 +16,7 @@ jobs:
       # TO DO : pull app name from secret?
       app_name: cicd-test-app
 
-  # TO DO : only run deployment if ci and build succeed
+  # TO DO : move to different workflow
   deploy:
     uses: ./.github/workflows/deploy.yml
     with:
