--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -21,3 +21,5 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     with:
       app_name: cicd-test-app
+    secrets:
+      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
