--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ on:
       app_name:
         required: true
         type: string
+    secrets:
+      HEROKU_API_KEY:
+        required: true
 
 jobs:
   heroku:
