Update github action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy app
 on:
   workflow_call:
     inputs:
-      app_name:
+      heroku_app_name:
         required: true
         type: string
     secrets:
@@ -21,7 +21,7 @@ jobs:
 
       # TO DO : reuse existing workflow
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ inputs.app_name }}:$(date +%s)
+        run: docker build . --file Dockerfile --tag ${{ inputs.heroku_app_name }}:$(date +%s)
 
       - name: Heroku container:login
         env:
@@ -31,9 +31,9 @@ jobs:
       - name: Heroku container:push
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:push -a ${{ inputs.app_name }} web
+        run: heroku container:push -a ${{ inputs.heroku_app_name }} web
 
       - name: Heroku container:release
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:release -a ${{ inputs.app_name }} web
+        run: heroku container:release -a ${{ inputs.heroku_app_name }} web
