--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -20,6 +20,6 @@ jobs:
   deploy:
     uses: ./.github/workflows/deploy.yml
     with:
-      app_name: cicd-test-app
+      heroku_app_name: bw-cicd-test-app
     secrets:
       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
