Update github action

--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -20,6 +20,7 @@ jobs:
   deploy:
     uses: ./.github/workflows/deploy.yml
     with:
-      heroku_app_name: bw-cicd-test-app
+      environment: Production
     secrets:
       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
