--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,11 @@ name: Build
 on:
   workflow_call:
     inputs:
-      app_name:
+      environment:
+        required: true
+        type: string
+    secrets:
+      HEROKU_APP_NAME:
         required: true
         type: string
 
@@ -15,6 +19,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Log
-        run: echo "app name ${{ inputs.app_name }}"
+        run: echo "app name ${{ secrets.HEROKU_APP_NAME }}"
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ inputs.app_name }}:$(date +%s)
+        run: docker build . --file Dockerfile --tag ${{ secrets.HEROKU_APP_NAME }}:$(date +%s)
