--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,8 @@ jobs:
 
       - name: Run tests
         run: npm run test
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: test lint
+        run: npm run lint
