--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Run tests
         run: npm run test
   lint:
+    needs: lint_test
     runs-on: ubuntu-latest
     steps:
       - name: test lint
