--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,16 @@
 name: CI
 
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      environment:
+        type: string
+        required: true
+    secrets:
+      HEROKU_API_KEY:
+        required: true
+      HEROKU_APP_NAME:
+        required: true
 
 jobs:
   lint_test:
@@ -28,9 +38,16 @@ jobs:
 
       - name: Run tests
         run: npm run test
-  lint:
-    needs: lint_test
+
+  build-docker-image:
     runs-on: ubuntu-latest
+
+    environment: ${{ inputs.environment }}
+
     steps:
-      - name: test lint
-        run: npm run lint
+      - uses: actions/checkout@v3
+
+      - name: Log
+        run: echo "app name ${{ secrets.HEROKU_APP_NAME }}"
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag ${{ secrets.HEROKU_APP_NAME }}:$(date +%s)
