--- a/.github/workflows/cd-prod.yml
+++ b/.github/workflows/cd-prod.yml
@@ -13,7 +13,7 @@ jobs:
       HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
 
   deploy:
-    needs: build
+    needs: ci
     uses: ./.github/workflows/cd.yml
     with:
       environment: Production
