--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run tests
         run: npm run test
 
-  build-docker-image:
+  build:
     runs-on: ubuntu-latest
 
     environment: ${{ inputs.environment }}
