--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,7 +13,7 @@ on:
         required: true
 
 jobs:
-  heroku:
+  deploy:
     runs-on: ubuntu-latest
 
     environment: ${{ inputs.environment }}
