Update github action

--- a/.github/workflows/cleanup-workflow-runs.yml
+++ b/.github/workflows/cleanup-workflow-runs.yml
@@ -1,6 +1,8 @@
 name: Clean Workflow Logs
 
 on:
+  push:
+    branches: ['update-github-actions']
   workflow_dispatch:
     inputs:
       days_old:
