--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint": "lb-eslint --fix --report-unused-disable-directives",
     "prettier": "lb-prettier --write",
     "pretest": "npm run rebuild",
-    "test": "nyc lb-mocha --allow-console-logs \"dist/__tests__\"",
+    "test": "jest",
     "docker:build": "docker build -t cicd-test-app .",
     "docker:run": "docker run -p 3000:3000 -d cicd-test-app",
     "premigrate": "npm run build",
@@ -58,12 +58,15 @@
     "@loopback/build": "^9.0.1",
     "@loopback/eslint-config": "^13.0.1",
     "@loopback/testlab": "^5.0.1",
+    "@types/jest": "^28.1.5",
     "@types/node": "^14.18.21",
     "eslint": "^8.17.0",
     "husky": "^8.0.0",
+    "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.21",
+    "ts-jest": "^28.0.6",
     "ts-node": "^10.8.2",
     "typescript": "~4.7.3"
   }
