--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
     "rebuild": "npm run clean && npm run build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "sdk:generate": "./src/scripts/generate-client-sdk/generate-client-sdk.sh"
   },
   "repository": {
     "type": "git",
@@ -65,6 +66,7 @@
     "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "nyc": "^15.1.0",
+    "openapi-typescript-codegen": "^0.23.0",
     "source-map-support": "^0.5.21",
     "ts-jest": "^28.0.6",
     "ts-node": "^10.8.2",
